AC_INIT([LibSass], [0.1.0], [aaron.leung@moovweb.com], [libsass], [http://www.github.com/hcatlin/libsass/])
AC_PREREQ([2.59])

AM_INIT_AUTOMAKE([1.10 -Wall no-define foreign])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX
AC_PROG_LIBTOOL
LT_INIT

AC_SUBST([LIBSASS_VERSION], [0.1.0])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT